Added CSS for colors and fonts to over-ride Bootstrap theme

--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: #F4F4F4;
+  background: white;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -19,6 +19,7 @@
   padding: 0px 10px;
 }
 .footer-links a:hover {
+  color: $red;
   opacity: 1;
 }
 .footer .fa-heart {
