--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,10 +1,10 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
+$red: #900C3F;
 $blue: #469AE0;
 $yellow: #FDB631;
-$orange: #E67E22;
+$orange: #E36414;
 $green: #32B796;
 $gray: #000000;
 $light-gray: #F4F4F4;
