--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -6,6 +6,8 @@
   color: white;
   position: relative;
   margin: 10px;
+  border-radius: 5px;
+  box-shadow:0 1px 3px rgba(0,0,0,0.6);
 }
 .card-user {
   position: absolute;
@@ -31,7 +33,7 @@
 }
 .card-description p {
   font-size: 14px;
-  opacity: 0.7;
+  opacity: 0.9;
   font-weight: lighter;
 }
 .card-link {
